--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ footer {
 .box {
     flex: 1;
     margin-bottom: 2rem;
-    padding: 0 1rem;
+    padding: 0rem 1rem;
     text-align: left;
 }
 
